# engineering-economics-basics

./: .gitignore  DOCS.md  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: main.yml  release.yml
docs/eng_econ/: factors.html  factors.md  index.html  index.md
eng_econ/: __init__.py  factors.py
html/eng_econ/: factors.html  index.html
htmlcov/: eng_econ___init___py.html  eng_econ_factors_py.html  index.html  status.json
tests/: test_eng_econ.py  test_factors.py
