[tool.poetry]
name = "eng_econ"
version = "0.1.0"
description = "This package provides some of the basic functions of engineering economics"
authors = ["Songyu-Wang <wangsongyuf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pdoc3 = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
black = "^20.8b1"
isort = "^5.4.2"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
